# riverwood-voice-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SUBMISSION_PACK_TEMP.md  VAPI_DASHBOARD_README_TEMP.md  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CallSection.tsx  Hero.tsx  LenisProvider.tsx  VoiceVisualizer.tsx
frontend/hooks/: useVapi.ts
frontend/lib/: backend-api.ts
src/: main.py
src/api/: routes.py
src/core/: config.py
src/schemas/: call_schemas.py
src/services/: vapi_service.py
