[project]
name = "riverwood-voice-agent"
version = "0.1.0"
description = "Production-grade outbound AI Voice Agent CRM backend for Riverwood Projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.4",
]

[project.scripts]
serve = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
